@startuml
User "1" *-- "1" UserName
User "1" *-- "1" UserID
User <.x UserService: 値として依存
UserRepository <|.. MySQLUserRepository: インターフェースの実現
UserRepository <--x UserService: 利用する

interface UserRepository {
  FindByID(id UserID) (*User, error)
  FindByName(name UserName) (*User, error)
  Save(user User) error
  Delete(user User) error
}

class MySQLUserRepository {
  + FindByID(id UserID) (*User, error)
  + FindByName(name UserName) (*User, error)
  + Save(user User) error
  + Delete(user User) error
}

class UserService {
  - userRepository: UserRepository
  + Exists(user User) bool
}
class UserName {
  - userName: string
  + Name() string
}
class UserID {
  - userID: string
  + UserID() string
}
class User {
  - userName: UserName
  - userID: UserID
  + ChangeName(userName UserName) error
}
@enduml
